23 January 2018: Wouter
	- Patch from Manabu Sonoda with tls-ciphers and tls-ciphersuites
	  options for unbound.conf.
	- Fixes for the patch, and man page entry.
	- Fix configure to detect SSL_CTX_set_ciphersuites, for better
	  library compatibility when compiling.
	- Patch for TLS session resumption from Manabu Sonoda,
	  enable with tls-session-ticket-keys in unbound.conf.
	- Fixes for patch (includes, declarations, warnings).

22 January 2018: Wouter
	- Fix space calculation for tcp req buffer size.
	- Doc for stream-wait-size and unit test.
	- unbound-control stats has mem.streamwait that counts TCP and TLS
	  waiting result buffers.
	- Fix for #4219: secondaries not updated after serial change, unbound
	  falls back to AXFR after IXFR gives several timeout failures.
	- Fix that auth zone after IXFR fallback tries the same master.

21 January 2018: Wouter
	- Fix tcp idle timeout test, for difference in the tcp reply code.
	- Unit test for tcp request reorder and timeouts.
	- Unit tests for ssl out of order processing.
	- Fix that multiple dns fragments can be carried in one TLS frame.
	- Add stream-wait-size: 4m config option to limit the maximum
	  memory used by waiting tcp and tls stream replies.  This avoids
	  a denial of service where these replies use up all of the memory.

17 January 2018: Wouter
	- For caps-for-id fallback, use the whitelist to avoid timeout
	  starting a fallback sequence for it.
	- increase mesh max activation count for capsforid long fetches.

16 January 2018: Ralph
	- Get ready for the DNS flag day: remove EDNS lame procedure, do not
	  re-query without EDNS after timeout.

15 January 2018: Wouter
	- In the out of order processing, reset byte count for (potential)
	  partial read.
	- Review fixes in out of order processing.

14 January 2018: Wouter
	- streamtcp option -a send queries consecutively and prints answers
	  as they arrive.
	- Fix for out of order processing administration quit cleanup.