@@ -6,7 +6,9 @@
 	  library compatibility when compiling.
 	- Patch for TLS session resumption from Manabu Sonoda,
 	  enable with tls-session-ticket-keys in unbound.conf.
-	- Fixes for patch (includes, declarations, warnings).
+	- Fixes for patch (includes, declarations, warnings).  Free at end
+	  and keep config options in order read from file to keep the first
+	  one as the first one.
 
 22 January 2018: Wouter
 	- Fix space calculation for tcp req buffer size.
